--- a/client/src/app/auth/signin/signin.component.html
+++ b/client/src/app/auth/signin/signin.component.html
@@ -1,13 +1,20 @@
-<form class="login-form">
-    <h1>Connexion</h1>
-    <div class="form-group">
-      <label for="username">Nom d'utilisateur</label>
-      <input type="text" id="username" placeholder="Enter username">
-    </div>
-    <div class="form-group">
-      <label for="password">Mot de passe</label>
-      <input type="password" id="password" placeholder="Enter password">
-    </div>
-    <button type="submit">Connexion</button>
-    <p>Vous n'avez pas de compte ? <a routerLink="/signup">Inscrivez-vous</a></p>
-</form>
+<div class="container">
+  <form class="login-form" [formGroup]="form" (ngSubmit)="signin()">
+    <h1>Open Food Facts</h1>
+    <h2>Te revoilà !</h2>
+    <span>Connectez-vous avec votre email et votre mot de passe</span>
+      <div class="form-group">
+        <label for="username">Email</label>
+        <input type="text" id="email" formControlName="email" placeholder="Entrez votre adresse email">
+      </div>
+      <div class="form-group">
+        <label for="password">Mot de passe</label>
+        <input type="password" id="password" formControlName="password" placeholder="Entrez votre mot de passe">
+      </div>
+      <div class="btn-container">
+        <button type="submit">Se connecter</button>
+      </div>
+      <p class="signup">Vous n'avez pas de compte ? <a routerLink="/signup">Inscrivez-vous</a></p>
+    </form>
+    <div class="img-signup"></div>
+</div>
