--- a/client/src/app/auth/signin/signin.component.scss
+++ b/client/src/app/auth/signin/signin.component.scss
@@ -1,39 +1,85 @@
-.login-form {
-    width: 360px;
-    margin: auto;
-    text-align: center;
+.container{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: flex;
 
-    h1{
-        margin: 10px 0;
-        font-size: 2em;
-        font-weight: bold;
-    }
-    .form-group {
-        display: flex;
-        flex-direction: column;
-        margin: 15px 0;
-
-        label {
-            font-size: 0.875em;
+    .login-form {
+        margin: auto;
+        height: 60vh;
+        text-align: center;
+    
+        h1{
+            font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+            text-align: left;
+            margin-top: 80px;
+            margin-bottom: 53px;
+            font-size: 2.5em;
             font-weight: bold;
-            margin-bottom: 5px;
+            color: black;
         }
-        input {
-            padding: 10px;
-            font-size: 0.875em;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+        h2 {
+            text-align: left;
+            font-size: 1.8em;
+            margin-bottom: 14px;
+            font-weight: 500;
+            color: black;
+        }
+        span{
+            display: block;
+            text-align: left;
+            color: #c2bcbc;
+        }
+        .form-group {
+            display: flex;
+            flex-direction: column;
+            margin-top: 15px;
+            margin-bottom: 10px;
+
+            label {
+                color: black;
+                text-align: left;
+                font-size: 0.875em;
+                font-weight: bold;
+                margin-bottom: 5px;
+            }
+            input {
+                padding: 10px;
+                font-size: 0.875em;
+                border: 1px solid #c2bcbc;
+                border-radius: 4px;
+            }
+        }
+        .btn-container{
+            width: 100%;
+            display: flex;
+            align-content: flex-start;
+            margin-top: 10px;
+            button {
+                background-color: #4b9934;
+                padding: 10px 20px;
+                border: none;
+                color: white;
+                font-size: 0.875em;
+                font-weight: bold;
+                cursor: pointer;
+            }
+            button:hover {
+                background-color: #4c993462;
+            }
+        }
+        .signup{
+            margin-top: 15px;
+            text-align: left;
+            color: #c2bcbc;
+            a{
+                color: #4b9934;
+            }
         }
     }
-    button {
-        background-color: #3498db;
-        border: none;
-        color: white;
-        padding: 10px 20px;
-        font-size: 0.875em;
-        cursor: pointer;
+    .img-signup{
+        opacity: 0.8;
+        width: 60%;
+        background: url(/assets/image/food_img.jpg) no-repeat center center;
+        background-size: cover;
+        display: flex;
     }
-    button:hover {
-        background-color: #2980b9;
-    }
-  }
+}
