--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -9,4 +9,11 @@
         </ul>
     </div>
 </header>
+<main>
+    <div>
+        <select name="" id="" style="position:relative; left: 100px">
+            <option *ngFor="let i of collectionCategories;" value="{{i}}">{{ i }}</option>
+        </select>
+    </div>
+</main>
 <app-modal-parent></app-modal-parent>
