Create navigation categories product

--- a/client/src/app/auth/signin/signin.component.html
+++ b/client/src/app/auth/signin/signin.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <form class="login-form" [formGroup]="form" (ngSubmit)="signin()">
-    <h1>Open Food Facts</h1>
+    <h1>Pur Beurre</h1>
     <h2>Te revoilà !</h2>
     <span>Connectez-vous avec votre email et votre mot de passe</span>
       <div class="form-group">
