--- a/client/src/app/auth/signup/signup.component.html
+++ b/client/src/app/auth/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <form class="register-form" [formGroup]="form" (ngSubmit)="signup()">
-        <h1>Open Food Facts</h1>
+        <h1>Pur Beurre</h1>
         <h2>Bienvenue !</h2>
         <span>Créez votre compte et commencez à faire votre choix</span>
         <div class="form-group">
