--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -27,13 +27,11 @@ select{
 }
 
 section app-card{
-    width: 90%;
+    width: 75%;
     margin: auto;
-    height: 100vh;
-    display: flex;
-    flex-wrap: wrap;
+    margin-top: 8rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 20px;
     align-items: stretch;
-    justify-content: flex-start;
-    align-content: flex-start;
-    
 }
