--- a/client/src/app/product-details/product-details.component.scss
+++ b/client/src/app/product-details/product-details.component.scss
@@ -1,4 +1,5 @@
 ::ng-deep .modal-product-container {
+    overflow: scroll;
     mat-dialog-container {
         background-color: white;
         padding: 0;
@@ -37,6 +38,16 @@
         }
         button:hover {
             background-color: #4c993462;
+        }
+        .more-informations{
+            margin-top: 1.5rem;
+        }
+        .show-substitution{
+            padding: 0.7rem;
+            border-radius: 6px;
+            color: white;
+            display: inline-block;
+            background: #ef7d00;
         }
         
     }
