--- a/client/src/app/components/auth/signup/signup.component.scss
+++ b/client/src/app/components/auth/signup/signup.component.scss
@@ -1,90 +1,124 @@
-.container{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+.container {
+    height: 100%;
     display: flex;
 
     .register-form {
-        width: 360px;
-        margin: auto;
-        text-align: center;
-        border-radius: 10px;
-
+        position: relative;
+        width: 50%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
         h1 {
-            font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-            text-align: left;
-            margin-top: 190px;
-            margin-bottom: 53px;
-            font-size: 2.5em;
-            font-weight: bold;
+            font-size: 1.8rem;
+            color: #4b9934;
         }
-        h2 {
-            text-align: left;
-            font-size: 1.8em;
-            margin-bottom: 4px;
-            font-weight: 500;
-        }
-        span{
-            display: block;
-            text-align: left;
-            color: #c2bcbc;
-        }
-        .errorMsg{
-            margin-top: 1rem;
-            margin-bottom: -1rem;
 
-            span{
-                text-align: left;
-                color: crimson;
-            }
+        p {
+            color: #666161;
         }
-        .form-group {
-            display: flex;
-            flex-direction: column;
-            margin-top: 25px;
-            margin-bottom: 18px;
-    
-            label {
-                text-align: left;
-                font-size: 0.875em;
-                font-weight: bold;
-                margin-bottom: 5px;
-            }
+
+        .form-control {
+            margin-top: 1.5rem;
+
             input {
-                padding: 10px;
-                font-size: 0.875em;
-                border: 1px solid #c2bcbc;
-                border-radius: 4px;
-            }
-        }
-        .btn-container{
-            width: 100%;
-            display: flex;
-            align-content: flex-start;
-            button {
-                background-color: #4b9934;
-                padding: 10px 20px;
+                width: 100%;
+                padding: 12px;
                 border: none;
-                color: white;
-                font-size: 0.875em;
-                font-weight: bold;
-                cursor: pointer;
+                border-bottom: 1px solid #4b9934;
+                outline: none;
             }
-            button:hover {
-                background-color: #4c993462;
+
+            input[type="email"] {
+                margin-bottom: 1.5rem;
+            }
+
+            // input:not(:last-child) {
+            //     margin-bottom: 1.5rem;
+            // }
+
+            .password-tip {
+                max-width: 450px;
+                display: block;
+                font-size: .8rem;
+                text-align: justify;
+                margin-top: .25rem;
+                display: none;
+            }
+
+            input[type="password"]:focus ~ .password-tip {
+                display: block;
             }
         }
-        img{
-            width: 170px;
-            height: 80px;
-            margin-top: 160px;
+
+        .errorMsg {
+            margin: 2rem auto 0 auto;
+            color: red;
+            text-align: justify;
+            font-size: 1rem;
+            max-width: 400px;
+        }
+
+        .btn-container {
+            margin-top: 3rem;
+
+            button {
+                width: 100%;
+                padding: 12px 0;
+                border: 1px solid #4b9934;
+                background-color: #4b9934;
+                color: #fff;
+                font-size: 1.2rem;
+                cursor: pointer;
+                transition: all ease-in .2s;
+            }
+
+            button:hover {
+                color: #4b9934;
+                background-color: #fff;
+            }
+        }
+
+        .nutri-score {
+            width: 100%;
+            text-align: center;
+            position: absolute;
+            bottom: 50px;
+            left: 0;
+
+            img {
+                width: 100%;
+                max-width: 125px;
+            }
         }
     }
-    .img-signup{
-        opacity: 0.8;
-        width: 70%;
-        height: 100vh;
-        background: url(/assets/image/food_img.jpg) no-repeat center center;
-        background-size: cover;
-        display: flex;
+
+    .img-signup {
+        width: 50%;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
 }
 
+@media screen and (max-width: 1223px) {
+    .container {
+        flex-direction: column-reverse;
+
+        .register-form {
+            width: 100%;
+            padding: 0 50px;
+            display: block;
+            margin-top: 3rem;
+        }
+
+        .img-signup {
+            width: 100%;
+            height: 25%;
+        }
+    }
+}
