--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,3 +2,7 @@
 @import '~normalize.css';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+*, *::before, *::after {
+    box-sizing: border-box;
+}
