--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -6,7 +6,7 @@
         <ul>
             <li><a routerLink="/">Accueil</a></li>
             <li><a routerLink="/favorite">Produits favoris</a></li>
-            <li><a href="https://fr.openfoodfacts.org/">Site open food facts</a></li>
+            <li><a href="https://fr.openfoodfacts.org/" target="_blank">Site open food facts</a></li>
         </ul>
     </div>
 </header>
