--- a/client/src/app/components/home/home.component.scss
+++ b/client/src/app/components/home/home.component.scss
@@ -33,7 +33,7 @@ main{
         font-size: 1rem;
         cursor: pointer;
         line-height: 1.1;
-        background-color: #e3c2a026;
+        background-color: #ff9c36;
     }
     section{
         width: 90%;
